# pip-licenses-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
piplicenses/: PipLicensesWarning.py  SpdxParser.py  __init__.py  __main__.py  cli.py  collection.py  collector.py  colors.py  constants.py  errors.py  output.py  setOps.py  spdx.py
piplicenses/cli/: CompatibleArgumentParser.py  CustomHelpFormatter.py  CustomNamespace.py  FormatArg.py  OrderArg.py  SelectAction.py  __init__.py  compatible_arg_parser.py  custom_help_formatter.py  custom_namespace.py  format_arg.py  order_arg.py  select_action.py
piplicenses/output/: CSVPrettyTable.py  JsonLicenseFinderTable.py  JsonPrettyTable.py  PlainVerticalTable.py  __init__.py  colors.py  csv.py  json.py  plain.py
requirements/: ci.txt  dev.txt  main.txt
stubs/: boolean.pyi  license_expression.pyi
tests/: __init__.py  test_cli.py  test_collector.py  test_integration.py  test_output.py  test_piplicenses.py  test_spdx.py
